# python-dev-setup-guide

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-concepts.md  02-installation.md  03-github-ssh.md  04-project-init.md  05-ai-workflow.md  06-debugging.md  07-git-workflow.md  08-security.md  09-bat-scripts.md  10-unit-testing.md  11-migration.md  12-ruff-config.md  13-gitignore.md  14-git-commit.md  15-src-reference.md  16-cheat-sheet.md  17-windows-encoding.md  18-deep-dive-src.md  19-deep-dive-uv.md  20-deep-dive-ssh.md  21-deep-dive-ci.md  agent-guide.md  index.md  开发环境配置手册.md  项目开发通用原则.md
scripts/: generate_images.py
src/python_dev_setup_guide/: __init__.py
tests/: test_basic.py
